cambios cambie alguna cosa xd

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Curso HTML</title>
 </head>
 <body>
-    <p>Hola estudiantes este es mi sitio web sigueme en twiter </p>
+    <p>Hola me cambié a twitch xd </p>
 </body>
 </html>
