--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso HTML</title>
+    <link rel="stylesheet" href="style.css">
+    <title></title>
 </head>
 <body>
-    <p>Hola me cambié a twitch xd </p>
+    <p></p>
 </body>
 </html>
