--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>Platzi Frontend-Developer</title>
 </head>
 <body>
-    <p></p>
+    <header>
+        <h1>Platzi Curse : <a href=https://platzi.com/cursos/frontend-developer/" target="_blank">Frontend-Developer</a></h1>
+    </header>
 </body>
 </html>
