Creación de Card

--- a/index.html
+++ b/index.html
@@ -8,8 +8,32 @@
     <title>Platzi Frontend-Developer</title>
 </head>
 <body>
-    <header>
-        <h1>Platzi Curse : <a href=https://platzi.com/cursos/frontend-developer/" target="_blank">Frontend-Developer</a></h1>
-    </header>
+    
+    <div class="fondo">
+
+        <img src="https://cdn.pixabay.com/photo/2020/07/06/01/33/forest-5375005_960_720.jpg" 
+        alt="imagen-dark" 
+        class="img-dark">
+        <div class="perfil-foto">
+        </div>
+
+        <h1>Jose Prado</h1>
+        <p class="subtitulo">Frontend-Developer</p>
+        <div class="seccion">
+            <p class="seccion1">Perú</p>
+            <p class="seccion1">Send email<p/>
+        </div>
+        <div class="description-cont">
+            <a href="#" class="description">
+                <p class="for-div">9000<br>followers</p>
+            </a>
+            <a href="#" class="description">
+                <p class="for-div">3000<br>following</p>
+            </a>
+        </div>
+        <a  href="#" class="follow">
+            <p>Follow</p>
+        </a>
+    </div>
 </body>
 </html>
