--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Platzi Frontend-Developer</title>
 </head>
 <body>
-    
+    <section>
     <div class="fondo">
 
         <img src="https://cdn.pixabay.com/photo/2020/07/06/01/33/forest-5375005_960_720.jpg" 
@@ -35,5 +35,6 @@
             <p>Follow</p>
         </a>
     </div>
+</section>
 </body>
 </html>
